--- a/problems/judge.yml
+++ b/problems/judge.yml
@@ -55,6 +55,7 @@ runtime:
   java8: /usr/lib/jvm/jdk-8-oracle-i586/bin/java
   javac8: /usr/lib/jvm/jdk-8-oracle-i586/bin/javac
   fish: /usr/bin/fish
+  mao: /usr/bin/mao
 # Custom V8 build to facilitate online judging: https://github.com/DMOJ/v8dmoj
   v8dmoj: /home/judge/judge/executors/v8dmoj
   php: /usr/bin/php
