--- a/problems/judge.yml
+++ b/problems/judge.yml
@@ -64,6 +64,7 @@ runtime:
   fernando: /usr/bin/fernando
   produire: /usr/bin/produire
   osabie: /usr/bin/05ab1e
+  bf-py: /usr/bin/bf-py
 # Custom V8 build to facilitate online judging: https://github.com/DMOJ/v8dmoj
   v8dmoj: /home/judge/judge/executors/v8dmoj
   php: /usr/bin/php
