--- a/problems/practicerevcat/init.yml
+++ b/problems/practicerevcat/init.yml
@@ -1,5 +1,7 @@
 test_cases:
-- {in: case1.in, out: case1.out}
-- {in: case2.in, out: case2.out}
+- batched:
+  - {in: case1.in, out: case1.out}
+  - {in: case2.in, out: case2.out}
+  points: 100
 checker: checker.py
 points: 100
