Duplicate judge to 6

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,10 @@ DEBUG=true
 TWO_STEP_REGISTRATION=false
 
 # Judge configuration
-JUDGE_NAME=Judge
+JUDGE_NAME1=Judge1
+JUDGE_NAME2=Judge2
+JUDGE_NAME3=Judge3
+JUDGE_NAME4=Judge4
+JUDGE_NAME5=Judge5
+JUDGE_NAME6=Judge6
 JUDGE_KEY=<A secure key string for Judge>
