--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -21,3 +21,5 @@ RUN ./make_style.sh
 RUN python3 manage.py collectstatic && \
     python3 manage.py compilemessages && \
     python3 manage.py compilejsi18n
+
+COPY fixtures/* /site/judge/fixtures/
