Add support for Tetris

--- a/judge/Dockerfile
+++ b/judge/Dockerfile
@@ -4,7 +4,7 @@ ARG TAG=komabafes2025
 ARG TIMEOUT=60
 
 RUN apt-get update && \
-    apt-get install -y git libtiff-dev libgdiplus erlang elixir gcc-12 nasm binutils vim gfortran libgc-dev
+    apt-get install -y git libtiff-dev libgdiplus erlang elixir gcc-12 nasm binutils vim gfortran libgc-dev nodejs
 RUN	runuser -u judge curl -m ${TIMEOUT} https://sh.rustup.rs -sSf | sh && \
 	curl -m ${TIMEOUT} https://github.com/dnek/mines-esolang/archive/d5694877a24f6c37a9c84a848febc683baffddc2.zip -L -o /opt/mines.zip && \
 	unzip /opt/mines.zip -d /opt/mines && \
@@ -25,6 +25,8 @@ RUN	runuser -u judge curl -m ${TIMEOUT} https://sh.rustup.rs -sSf | sh && \
 	curl https://github.com/youz/grasses/raw/refs/heads/master/C/grass.c -L -o grass.c && gcc grass.c -lgc -o /usr/bin/grass && \
 	cd && \
     rm -rf /var/cache/apk/* /tmp/*
+
+
 
 RUN mkdir /judge /problems && cd /judge && \
 	curl -L https://github.com/tRue-math/judge-server/archive/"${TAG}".tar.gz | tar -xz --strip-components=1 && \
