--- a/problems/judge.yml
+++ b/problems/judge.yml
@@ -55,6 +55,17 @@ runtime:
   javac: /usr/bin/javac
   java8: /usr/lib/jvm/jdk-8-oracle-i586/bin/java
   javac8: /usr/lib/jvm/jdk-8-oracle-i586/bin/javac
+  scala_args:
+  - -Xbootclasspath/a:/usr/share/scala-2.11/lib/hawtjni-runtime.jar:/usr/share/scala-2.11/lib/jansi.jar:/usr/share/scala-2.11/lib/jline.jar:/usr/share/scala-2.11/lib/scala-actors.jar:/usr/share/scala-2.11/lib/scala-compiler.jar:/usr/share/scala-2.11/lib/scala-library.jar:/usr/share/scala-2.11/lib/scala-parser-combinators.jar:/usr/share/scala-2.11/lib/scala-reflect.jar:/usr/share/scala-2.11/lib/scala-xml.jar:/usr/share/scala-2.11/lib/scalap.jar
+  - -classpath
+  - '''""'''
+  - -Dscala.boot.class.path=/usr/share/scala-2.11/lib/hawtjni-runtime.jar:/usr/share/scala-2.11/lib/jansi.jar:/usr/share/scala-2.11/lib/jline.jar:/usr/share/scala-2.11/lib/scala-actors.jar:/usr/share/scala-2.11/lib/scala-compiler.jar:/usr/share/scala-2.11/lib/scala-library.jar:/usr/share/scala-2.11/lib/scala-parser-combinators.jar:/usr/share/scala-2.11/lib/scala-reflect.jar:/usr/share/scala-2.11/lib/scala-xml.jar:/usr/share/scala-2.11/lib/scalap.jar
+  - -Dscala.home=/usr/share/scala-2.11
+  - -Dscala.usejavacp=true
+  - -Denv.emacs=
+  - scala.tools.nsc.MainGenericRunner
+  scala_vm: /usr/lib/jvm/java-22-openjdk-amd64/bin/java
+  scalac: /usr/bin/scalac
   fish: /usr/bin/fish
   mao: /usr/bin/mao
   cargo: /home/judge/.cargo/bin/cargo
@@ -87,3 +98,4 @@ runtime:
   alice: /usr/bin/ruby
   vim-executor: /usr/bin/vim-executor
   grass: /usr/bin/grass
+  tetris.mjs: /usr/bin/tetris.mjs
