Fix source code strip

--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -10,16 +10,16 @@ RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - && \
 RUN apt-get install -y libmysqlclient-dev
 
 WORKDIR /
-RUN git clone https://github.com/DMOJ/site.git --recursive --depth 1
-WORKDIR /site
+RUN git clone -b no-strip-source https://github.com/Taisei-dev/online-judge.git --recursive --depth 1
+WORKDIR /online-judge
 RUN pip3 install -r requirements.txt --break-system-packages && \
     pip3 install mysqlclient uwsgi redis --break-system-packages
 
-COPY local_settings.py /site/dmoj/local_settings.py
+COPY local_settings.py /online-judge/dmoj/local_settings.py
 
 RUN ./make_style.sh
 RUN python3 manage.py collectstatic && \
     python3 manage.py compilemessages && \
     python3 manage.py compilejsi18n
 
-COPY fixtures/* /site/judge/fixtures/
+COPY fixtures/* /online-judge/judge/fixtures/
